<resources>
    <string name="app_name">U5</string>
    <string name="serverurl">http://longhua/niwo.apk</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_find_password">FindPasswordActivity</string>
    <string name="title_activity_bind_qq">BindQQActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_search_shop">SearchShopActivity</string>
    <string name="title_activity_label_list">LabelListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="shop_pay">付款</string>
    <string name="shop_recommend">热门推荐</string>
    <string name="shop_search">搜索</string>
    <string name="label_title">标签</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="label_prompt">点击换一换会有不同的收获</string>
    <string name="label_name1">NO1标签</string>
    <string name="label_name2">暂未开通</string>
    <string name="label_name3">暂未开通</string>
    <string name="title_activity_discount_and_pay">DiscountAndPayActivity</string>
    <string name="title_activity_login_other_qq">LoginOtherQQActivity</string>
    <string name="qq_login">登录</string>
    <string name="qq_logout">退出当前账号</string>
    <string name="title_activity_image_amplification">ImageAmplificationActivity</string>
    <string name="profile_my_labels">我的标签管理</string>
    <string name="profile_my_trade">我的交易</string>
    <string name="profile_my_bean">我的U豆</string>
    <string name="profile_my_discount">我的折扣卷</string>
    <string name="profile_active_center">活动中心</string>
    <string name="profile_about_us">关于我们</string>
    <string name="profile_help">帮助反馈</string>
    <string name="profile_pwd">密码</string>
    <string name="profile_pwd_set">设置密码</string>
    <string name="profile_pwd_change">修改密码</string>
    <string name="profile_setting">设置</string>
    <string name="profile_exit">退出</string>
    <string name="title_activity_go_pay">GoPayActivity</string>
    <string name="title_activity_evaluate">EvaluateActivity</string>
    <string name="title_my_label">我的标签</string>
    <string name="title_edit_label">修改标签</string>
    <string name="title_their_detail">他的详情</string>
    <string name="title_label_detail">%1$s的标签</string>
    <string name="title_shops">商家</string>
    <string name="title_comment">评价</string>
    <string name="title_about_us">关于我们</string>
    <string name="shop_list_tab_1">全国</string>
    <string name="shop_list_tab_2">本市</string>
    <string name="shop_list_tab_3">10KM</string>
    <string name="search_type_1">全国</string>
    <string name="search_type_2">本市</string>
    <string name="search_type_3">10KM</string>
    <string name="label_detail_header_btn">关注</string>
    <string name="label_detail_header_btn_cared">已关注</string>
    <string name="title_current_city">当前城市</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="Connecting">正在连接服务器</string>
    <string name="Refresh">刷新</string>
    <string name="profile_my_payment">我的消费</string>
    <string name="ActiveOrder">未完成交易</string>
    <string name="Payment">付款</string>
    <string name="CompletedOrder">已完成交易</string>
    <string name="profile_my_order">我的交易</string>
    <string name="title_activity_transction">TransctionActivity</string>
    <string name="title_activity_transaction_receiver">TransactionReceiverActivity</string>
    <string name="Target">对方：</string>
    <string name="OrderContent">交易内容</string>
    <string name="CompleteOrder">完成交易</string>
    <string name="profile">个人信息</string>
    <string name="AboutUs">关于我们</string>
    <string name="Good">好评</string>
    <string name="JustSoso">中评</string>
    <string name="Bad">差评</string>
    <string name="Confirm">确认</string>
    <string name="Cancel">取消</string>
    <string name="Portrait">头像</string>
    <string name="Rich_AboutUs">&lt;big>名称：&lt;/big>U5（有我）</string>
    <string name="Set">设置</string>
    <string name="shop_list_diatance">%1$sKM</string>
    <string name="InUse">点击使用</string>
    <string name="CouponTitle">名　　称</string>
    <string name="CouponDescript">说　　明</string>
    <string name="CouponseDiscount">折扣</string>
    <string name="Percent">%</string>
    <string name="Description">说明</string>
    <string name="ActiveDate">生效日期</string>
    <string name="DueTo">截止日期</string>
    <string name="PublishDate">发布日期</string>
    <string name="Note">说明</string>
    <string name="Code">编码</string>
    <string name="Balance">总额</string>
    <string name="BuyBean">购买</string>
    <string name="Buy">购买</string>
    <string name="Send">发送</string>
    <string name="ShopName">商家名称</string>
    <string name="GenderNotSure">未知</string>
    <string name="GenderMale">男</string>
    <string name="GenderFemale">女</string>
    <string name="prompt_verify">输入手机号获取验证码</string>
    <string name="about_us_current_version">U5当前版本：%1$s</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="feeling">动态</string>
    <string name="newFeeling">发表动态</string>
    <string name="appointment">我的预约</string>
    <string name="add">增加</string>
    <string name="selectContacts">选择联系人</string>
    <string name="complete">完成</string>
</resources>