<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@color/bg_gray"
    android:orientation="vertical" >
     <include layout="@layout/normal_header" />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:orientation="vertical" >

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/Target" />

             <TextView
                 android:id="@+id/txtNickName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:text="TextView"
                 android:textColor="@color/orange" />
         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >

             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/OrderContent" />

             <TextView
                 android:id="@+id/txtNote"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:text="TextView" />

          

         </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/rbGood"
                    android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:checked="true"
                 style="@style/MyCheckBox"
                 android:text="@string/Good" />

                <RadioButton
                    android:id="@+id/rbNormal"
                    android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 style="@style/MyCheckBox"
                    android:text="@string/JustSoso" />

                <RadioButton
                    android:id="@+id/rbBad"
                     android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 style="@style/MyCheckBox"
                    android:text="@string/Bad" />

             </LinearLayout>
    

     <EditText
         android:id="@+id/txtComments"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:ems="10"
         android:hint="在这里输入您的评价"
         android:inputType="textMultiLine"
         android:maxLines="8"
         android:minHeight="40dp"
         android:minLines="3"
         android:singleLine="false" >

         <requestFocus />
     </EditText>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >

         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" >

             <Button
                 android:id="@+id/btnConfirm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:background="@color/orange"
                 android:padding="10dp"
                 android:layout_marginRight="6dp"
                 android:text="@string/Confirm"
                 android:textColor="@color/white" />

         </RelativeLayout>

         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1" >

             <Button
                 android:id="@+id/btnCancel"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="false"
                 android:layout_alignParentTop="false"
                 android:layout_marginLeft="6dp"
                 android:background="@color/green"
                 android:padding="10dp"
                 android:text="@string/Cancel"
                 android:textColor="@color/white" />

         </RelativeLayout>

     </LinearLayout>
 </LinearLayout>
</LinearLayout>
