<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/orange" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            style="@style/large_white"
            android:text="@string/Cancel"
            android:background="@color/transparent"
            android:gravity="center"
            android:id="@+id/tvCancel" />

        <TextView
            android:id="@+id/headerText"
            style="@style/x_large_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/selectContacts" />


        <Button
            android:id="@+id/rightTextBtn"
            style="@style/large_white"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:text="@string/complete"/>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lvSelectContacts"
            android:dividerHeight="0dp"
            android:divider="@color/transparent"
            android:listSelector="@color/transparent" />

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_gravity="right|top"
            android:background="#ff303030"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/title_layout_catalog"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#E0E0E0"
                android:paddingBottom="5dip"
                android:paddingLeft="5dip"
                android:paddingTop="5dip"
                android:textColor="#454545" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>