<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical" >

    <include layout="@layout/normal_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_search_bg"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/searchBtn"
                style="@style/x_large_orange"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="搜索" />



            <EditText
                android:id="@+id/search_editor"
                style="@style/s_small_orange"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="22dp"
                android:background="@color/transparent"
                android:focusable="true"
                android:hint="@string/shop_search"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/orange" >
            </EditText>


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/type_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white" >

            <RelativeLayout
                android:id="@+id/tabRegion1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tabText1"
                    style="@style/small_deep_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/search_type_1" />

                <LinearLayout
                    android:id="@+id/below1"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical" >
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tabRegion2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tabText2"
                    style="@style/small_deep_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/search_type_2" />

                <LinearLayout
                    android:id="@+id/below2"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical" >
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tabRegion3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tabText3"
                    style="@style/small_deep_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/search_type_3" />

                <LinearLayout
                    android:id="@+id/below3"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical" >
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <fragment
                android:id="@+id/label_list_fragment"
                android:name="com.longhuapuxin.fragment.LabelListFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>